CMBSandbox4/src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>now() - Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>bde__Batch__c</referenceTo>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Unbillable__c</fullName>
        <formula>IF(CONTAINS(Invoice__r.Account__r.Name, &quot;CloudMyBiz&quot;),&quot;CloudMyBiz&quot;, &quot;ClientHours&quot;)</formula>
        <label>Billable/Unbillable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contractor_Hour_Ratio_Copy__c</fullName>
        <description>This field will capture and copy the Client Contractor Hour Ratio via workflow. and can be overwirten.</description>
        <label>Client Contractor Hour Ratio (Copy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Contractor_Hour_Ratio__c</fullName>
        <description>IF(
Invoice__r.Account__r.Client_Contractor_Hour_Ratio__c=null,
IF(
   Contractor__r.Contractor_Hour_Ratio__c=null,0.5,Contractor__r.Contractor_Hour_Ratio__c),

Invoice__r.Account__r.Client_Contractor_Hour_Ratio__c

)</description>
        <formula>Opportunity__r.Account.Client_Contractor_Hour_Ratio__c</formula>
        <label>Client Contractor Hour Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cnt_Fee__c</fullName>
        <formula>Contractor_Rate__c *  (Hours__c +  Credit_Hrs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Hour_Ratio_To_Use__c</fullName>
        <formula>IF(ISBLANK(Contractor__c ),
1,
IF( 
OR(
Client_Contractor_Hour_Ratio__c &gt;Contractor_Hour_Ratio__c,
Client_Contractor_Hour_Ratio__c &gt;0.50),
Client_Contractor_Hour_Ratio__c,
IF(Contractor_Hour_Ratio__c&gt;0,
Contractor_Hour_Ratio__c,
1
)))</formula>
        <label>Contractor Hour Ratio To Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_Hour_Ratio__c</fullName>
        <formula>IF(Contractor__r.Contractor_Hour_Ratio__c&gt;=0,
Contractor__r.Contractor_Hour_Ratio__c,
Contractor__r.Contractor_Hour_Ratio__c)</formula>
        <label>Contractor Hour Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_Hours__c</fullName>
        <formula>IF( 
Contractor_Rate__c &gt;0,
(Hours__c + Credit_Hrs__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_ID__c</fullName>
        <formula>Contractor__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Rate__c</fullName>
        <label>Contractor Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_Custom__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time (Custom)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Hrs_Formula__c</fullName>
        <description>This is a workaround to allow subtraction from credit hours</description>
        <formula>Credit_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Hrs Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Hrs__c</fullName>
        <label>Credit (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To track credit line item(hidden field  just for info)</description>
        <label>Credit Line Item</label>
        <referenceTo>Credit_Line_Item__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit/PrePaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours Over SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMB Inefficiencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Ratio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTimeValue_For_Testing__c</fullName>
        <formula>DATETIMEVALUE(&quot;2005-11-15 17:00:00&quot;)</formula>
        <label>DateTimeValue - For Testing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Compare_Test__c</fullName>
        <formula>IF( Date__c &lt;&gt; Date_Conga__c,1,null)</formula>
        <label>Date Compare Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Conga_Text__c</fullName>
        <label>Date (Conga - Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Conga__c</fullName>
        <formula>IF(NOT(ISBLANK(DATEVALUE(Start__c))),DATEVALUE(Start__c), Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Conga)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Import_Text_Trimmed__c</fullName>
        <formula>SUBSTITUTE(Date_Import__c  , &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Import - Text - Trimmed)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Import__c</fullName>
        <label>Date (Import - Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Trim_Test__c</fullName>
        <formula>Date_Import_Text_Trimmed__c &amp;&quot;|&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Trim Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Invoice_Formula__c</fullName>
        <formula>Deposit_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is to allow workflow fired</inlineHelpText>
        <label>Deposit Invoice Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the related deposit invoice</inlineHelpText>
        <label>Deposit Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Invoice__c.Opportunity__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items (Deposit Invoice)</relationshipLabel>
        <relationshipName>Invoice_Line_Items_Deposit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of time / notes</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_from_Invoice__c</fullName>
        <formula>Invoice__r.Description__c</formula>
        <label>Description from Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <label>End Time (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <formula>(( Rate__c  *  Hours__c) +  Fixed_Fee__c ) -  Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field_for_Conga_Sorting__c</fullName>
        <formula>MONTH( DATEVALUE(Start__c ) ) + 
DAY( DATEVALUE(Start__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field for Conga Sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finish__c</fullName>
        <label>Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fixed_Fee__c</fullName>
        <inlineHelpText>This is to log non-hourly fees for an invoice, such as App costs.</inlineHelpText>
        <label>Fixed Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form_Count_Num__c</fullName>
        <formula>TEXT(LEN( Start_Time_Text__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form (Count Num)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_End_Time__c</fullName>
        <formula>Date_Import_Text_Trimmed__c &amp;&quot; &quot;&amp;
IF(TEXT(LEN(  End_Time_Text__c  ))=&quot;10&quot;,LEFT( End_Time_Text__c  ,4) &amp;&quot; &quot;&amp; RIGHT( End_Time_Text__c  ,2),
LEFT( End_Time_Text__c  ,5) &amp;&quot; &quot;&amp; RIGHT( End_Time_Text__c  ,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Start_Time__c</fullName>
        <formula>Date_Import_Text_Trimmed__c &amp;&quot; &quot;&amp;
IF(TEXT(LEN( Start_Time_Text__c ))=&quot;10&quot;,LEFT(Start_Time_Text__c ,4) &amp;&quot; &quot;&amp; RIGHT(Start_Time_Text__c ,2),
LEFT(Start_Time_Text__c ,5) &amp;&quot; &quot;&amp; RIGHT(Start_Time_Text__c ,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross__c</fullName>
        <formula>Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HarvestProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_ICF__c</fullName>
        <formula>IF(Invoice__r.Account__r.Id =&quot;0016000000n6sz2&quot;, Hours__c,null)</formula>
        <label>Hours (ICF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Num__c</fullName>
        <label>Hours (#)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Other__c</fullName>
        <formula>IF(Invoice__r.Account__r.Id =&quot;0016000000n6sz2&quot;, null, Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours (Other)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>IF(NOT(ISBLANK(Finish__c)),((((Finish__c -  Start__c)*1440)/60 )-  Credit_Hrs_Formula__c ), (Hours_Num__c -  Credit_Hrs_Formula__c ))</formula>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_for_Client_Invoice__c</fullName>
        <formula>IF(
CONTAINS(Task_Type__c,&quot;Non-Billable&quot;), Hours_Num__c * Contractor_Hour_Ratio_To_Use__c, Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will ensure that the hours displayed on the invoice line items are showing hours for the non-billable activity</inlineHelpText>
        <label>Hours for Client Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Date__c</fullName>
        <label>Import Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item Summary</label>
        <referenceTo>Invoice_Line_Item_Summary__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>TEXT(Invoice__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <formula>IF(NOT(ISBLANK(Finish__c)),
((Finish__c - Start__c)*1440),
(Hours_Num__c *60)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotToExceed__c</fullName>
        <defaultValue>10</defaultValue>
        <label>NotToExceed</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes (Don&apos;t Use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Invoice__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <description>(Hours__c  * Rate__c) - (Contractor_Rate__c  * Hours__c )</description>
        <formula>(Hours__c  * Rate__c) - (Contractor_Rate__c  * (Hours__c + Credit_Hrs__c) ) -  Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Code_Harvest__c</fullName>
        <label>Project Code (Harvest)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Harvest_Text__c</fullName>
        <inlineHelpText>This will be updated via a workflow for the sake of using it in a conga query. A formula field could not be used</inlineHelpText>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Harvest__c</fullName>
        <formula>Time_Entry__r.HarvestProject__r.Name</formula>
        <inlineHelpText>Formula field. This reads from the time entry project.</inlineHelpText>
        <label>Project (Harvest) OLD-FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project (OLD)</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Override__c</fullName>
        <label>Rate (Override)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <formula>IF(
CONTAINS(Task_Type__c,&quot;Non-Billable&quot;),0,
IF( 
Rate_Override__c &gt;0,Rate_Override__c, 
Invoice__r.Rate__c
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remove_from_Client_Inv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Client Inv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Client_Y_N__c</fullName>
        <formula>Time_Entry__r.Invoice_Sent_to_Client__c</formula>
        <label>Sent to Client (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_of_Hours__c</fullName>
        <label>Source of Hours</label>
        <picklist>
            <picklistValues>
                <fullName>Harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timesheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <label>Start Time (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Harvest__c</fullName>
        <description>This will be to import that tasks from harvest.</description>
        <label>Task (Harvest)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Notes__c</fullName>
        <label>Task &amp; Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Created_Date__c</fullName>
        <formula>Time_Entry__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This shows the created date of the related time entry record.</inlineHelpText>
        <label>Time Entry Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Entry_ID_Formula__c</fullName>
        <formula>Time_Entry__r.Id</formula>
        <label>Time Entry ID Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Time Entry Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Entry</label>
        <referenceTo>HarvestTimeEntry__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Today_Value__c</fullName>
        <formula>DATE(
YEAR( TODAY() ),
MONTH(TODAY()),
DAY(TODAY())) 
- DATEVALUE(&quot;2013-01-01&quot;)</formula>
        <label>Today (Days Since Jan 1 13)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <formula>DAY(today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date (Day)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_MCA_App_Price_on_Opp__c</fullName>
        <formula>Opportunity__r.Account.Total_MCA_App_Price_on_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total MCA App Price on Opp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCredit_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will be populated with  a workflow for the purpose of the roll p summary.</inlineHelpText>
        <label>isCredit Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCredit__c</fullName>
        <formula>IF (Fee__c &lt;0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCredit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will be populated via a workflow rule</inlineHelpText>
        <label>isDeposit</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_add_line_items_to_PaidSent</fullName>
        <active>true</active>
        <description>Cannot add line items to invoice status paid</description>
        <errorConditionFormula>AND(
Hours__c &gt;0.01,
  ISNEW(),
OR(
Invoice_Status__c =&quot;Paid&quot;,
Invoice_Status__c =&quot;Sent&quot;),
Invoice__r.Allow_Add_l_Hours_When_Paid_Sent__c = false
)</errorConditionFormula>
        <errorMessage>Cannot add line items to a Paid or Sent Invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_add_line_items_to_pending_send</fullName>
        <active>true</active>
        <description>Cannot add line items to invoice status pending send</description>
        <errorConditionFormula>AND(
IF( 
Invoice_Status__c =&quot;Pending \&quot;Send\&quot;&quot;,true,false),
  ISNEW(),
 Invoice__r.Allow_Add_l_Hours_When_Paid_Sent__c = false
)</errorConditionFormula>
        <errorMessage>Cannot add line items to Invoice Status Pending Send</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contractor_hours_without_rate</fullName>
        <active>false</active>
        <description>Contractor hours without rate</description>
        <errorConditionFormula>AND(
 not(ISBLANK(Contractor__c )), 
 ISBLANK(Contractor_Rate__c  ) 
)</errorConditionFormula>
        <errorDisplayField>Contractor_Rate__c</errorDisplayField>
        <errorMessage>Please add Contractor Rate. You cannot add Contractor Hours without Contractor Rate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contractor_rate_without_hours</fullName>
        <active>true</active>
        <description>Contractor_rate_without_hours</description>
        <errorConditionFormula>AND(
 ISBLANK(Contractor__c ), 
 NOT(ISBLANK(Contractor_Rate__c ) ) 
)</errorConditionFormula>
        <errorDisplayField>Contractor__c</errorDisplayField>
        <errorMessage>Please add the &quot;Contractor&quot; name. You cannot add &quot;Contractor Rate&quot; without &quot;Contractor&quot; name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LI_ACCTID_Not_matching_Inv</fullName>
        <active>true</active>
        <description>AccountID on Line Item not matching AccountID on Invoice</description>
        <errorConditionFormula>AND(
NOT( Invoice__r.Id = &apos;a096000000MdejF&apos;),
 Opportunity__r.AccountId &lt;&gt;   Invoice__r.Account_ID__c 
)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>AccountID on Line Item not matching AccountID on Invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Line_Item_Cannot_Be_Modified_When_Sent</fullName>
        <active>false</active>
        <description>AND(
ISCHANGED( LastModifiedDate ),
OR(
NOT(ISBLANK( Invoice__r.Date_Sent__c )),
 CONTAINS(TEXT(Invoice__r.Status__c ), &quot;Sent&quot;) 
)
)</description>
        <errorConditionFormula>AND(
ISCHANGED( Hours__c  ),
NOT(ISBLANK( Invoice__r.Date_Sent__c ))
)</errorConditionFormula>
        <errorMessage>Line Items Cannot Be Modified Once the Invoice has been Sent to the Client (Invoice Date Sent &lt;&gt; Null)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_Credit_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Credit_Hrs__c &gt; Hours_Num__c ,
 ISBLANK(TEXT( Credit_Reason__c )) 
)</errorConditionFormula>
        <errorDisplayField>Credit_Reason__c</errorDisplayField>
        <errorMessage>Please add Credit Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NotToExeedHours</fullName>
        <active>false</active>
        <errorConditionFormula>Hours__c &gt;NotToExceed__c</errorConditionFormula>
        <errorDisplayField>NotToExceed__c</errorDisplayField>
        <errorMessage>NotToExeedHours - Please check the time log</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_to_be_less_than_1</fullName>
        <active>false</active>
        <errorConditionFormula>(Hours__c + Credit_Hrs__c)  &lt;0.001</errorConditionFormula>
        <errorMessage>No Hours Have Been Added</errorMessage>
    </validationRules>
</CustomObject>